Bug 139218 - Title Page: Page number in "Reset page numbering after this page" defaults to 0 instead of 1
Summary: Title Page: Page number in "Reset page numbering after this page" defaults to...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.1.0.1 rc
Hardware: All Linux (All)
: medium minor
Assignee: Julien Nabet
URL:
Whiteboard: target:7.2.0 target:7.1.0.2
Keywords:
Depends on:
Blocks:
 
Reported: 2020-12-25 07:27 UTC by Kevin Suo
Modified: 2021-01-04 17:48 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
screenshot (47.52 KB, image/png)
2020-12-25 07:27 UTC, Kevin Suo
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kevin Suo 2020-12-25 07:27:41 UTC
Created attachment 168476 [details]
screenshot

See attached screenshot. It should default to 1.

In addition, if you click once the "+" spin button, it changes directly from 0 to 2, which means the program may thinking it is 1 but on the UI it is displaying as 0.

Version: 7.1.0.1.0+
Build ID: a88dbaf6a9076b546300f3c640ac38c5209a1ce2
CPU threads: 4; OS: Linux 5.9; UI render: default; VCL: gtk3
Locale: zh-CN (zh_CN.UTF-8); UI: en-US
Calc: threaded
Fedora 32
Comment 1 Julien Nabet 2020-12-25 09:48:17 UTC
On pc Debian x86-64 with master sources updated today, I could reproduce this.
Comment 2 Julien Nabet 2020-12-25 09:48:32 UTC
I gave a try with:
https://gerrit.libreoffice.org/c/core/+/108279
Comment 3 Commit Notification 2020-12-25 10:51:32 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b905937211154b0e923312641f09629e68ed7901

tdf#139218: Title Page: fix "Reset page number", put default at 1

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Kevin Suo 2020-12-27 03:22:16 UTC
Verified fixed on master.
Comment 5 Xisco Faulí 2021-01-04 17:47:55 UTC
Verified in

Version: 7.2.0.0.alpha0+
Build ID: 2c9708cbb870483a8a1c93d722085be5f789d234
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

@Julien, thanks for fixing this issue!!
Comment 6 Commit Notification 2021-01-04 17:48:49 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "libreoffice-7-1":

https://git.libreoffice.org/core/commit/e7a9d06d7d9f8dcad48c55df35de10d8e1196c56

tdf#139218: Title Page: fix "Reset page number", put default at 1

It will be available in 7.1.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.