tdf#139218: Title Page: fix "Reset page number", put default at 1

Change-Id: Ic3758d8eeeb1818e3be3ca5d815fa601a34e8dd9